# hs-obfuscate

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  default.nix  nixpkgs.json  obfuscate.cabal  pkgs.nix  shell.nix
src/Web/: Obfuscate.hs
src/Web/Obfuscate/: TH.hs
test/Web/: ObfuscateSpec.hs
test/Web/Obfuscate/: THSpec.hs
