cabal-version:       2.4

name:                obfuscate
version:             0.2.0.0
synopsis:            A small library for obfuscating numeric IDs
-- description:
homepage:            https://github.com/foxhound-systems/hs-obfuscate
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ben Levy
maintainer:          ben@foxhound.systems
-- copyright:
category:            Web
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     Web.Obfuscate
                     , Web.Obfuscate.TH
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13.0.0
                     , aeson
                     , hashids-st
                     , persistent
                     , scientific
                     , text
                     , template-haskell >= 4.18.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite obfuscate-hs-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Web.ObfuscateSpec
  build-depends:       base >=4.13.0.0
                     , obfuscate
                     , hspec
                     , aeson
                     , hashids-st
                     , persistent
                     , scientific
                     , text
                     , template-haskell >= 4.18.0.0
